--- a/src/components/Layout/Header/Header.css
+++ b/src/components/Layout/Header/Header.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 5rem;
-  background-color: #8a2b06;
+  background-color: #df460a;
   color: white;
   display: flex;
   justify-content: space-between;
@@ -14,15 +14,6 @@
   z-index: 10;
 }
 
-/* Rest of your existing styles for .icon, .badge, .bump, etc. */
-
-.button {
-  margin-left: auto; /* Push the button to the right */
-  margin-right: 2rem; /* Adjust this margin to
-
-
-/* Rest of your existing styles for .button, .icon, .badge, .bump, etc. */
-
 .main-image {
   width: 100%;
   height: 25rem;
@@ -31,7 +22,7 @@
 }
 
 .main-image img {
-  width: 110%;
+  width: 130%;
   height: 100%;
   object-fit: cover;
   transform: rotateZ(-5deg) translateY(-4rem) translateX(-1rem);
